# seefood

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  dodo.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  runs.dvc  search.html  searchindex.js  setup.cfg  ufanet.html
.dvc/: config
.github/workflows/: auto_tests.yaml  sphinx_docs_to_gh_pages.yaml
_modules/: index.html
_modules/seefood/: augs.html  data.html  model.html
_sources/: ufanet.rst.txt
docs/source/: conf.py  index.rst
docs/source/locale/ru/LC_MESSAGES/: index.po  ufanet.po
seefood/: __init__.py  augs.py  data.py  interface.py  model.py  run_pipeline.py
tests/: conftest.py
tests/test_data/: test.csv  train.csv
tests/unit/: seefood_unit_tests.py
