[tool.poetry]
name = "ufanet"
version = "0.1.1alpha"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
albumentations = "^1.4.1"
lightning = "^2.2.1"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
torch = [
    { platform = "darwin", version = "2.2.2", source = "PyPi" },
    { platform = "linux", version = "2.2.2+cpu", source = "pytorch_cpu" },
    { platform = "win32", version = "2.2.2+cpu", source = "pytorch_cpu" }
]
torchvision = "0.17.2+cpu"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-design = "^0.5.0"
sphinx-gallery = "^0.15.0"
numpydoc = "^1.7.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"
